# otus-cpp-04.homework

./: CMakeLists.txt  Doxyfile  README.md  lib_sfinae.cpp  lib_sfinae.h  sfinae.cpp  test_sfinae.cpp
.github/workflows/: release.yml
docs/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  README_8md.html  annotated.html  classes.html  dir_16dc06ccad1c995e93b8e7192336216a.html  dir_16dc06ccad1c995e93b8e7192336216a_dep.map  dir_16dc06ccad1c995e93b8e7192336216a_dep.md5  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5c04afa695857b92bebcb9cac0d46f36.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_63772b626f2709090f0bdca0f40827b4_dep.map  dir_63772b626f2709090f0bdca0f40827b4_dep.md5  dir_721865ac18f5179cf2211d1b67312542.html  dir_a79c168ca909e4d478fea20efc116125.html  dir_c6be29bfbec9b75e725da2b5c7b2cf20.html  files.html  functions.html  (+73 more)
html/: annotated.html  classes.html  files.html  lib_8h_source.html  lib__sfinae_8h_source.html  md_README.html  pages.html  structMyStruct.html  structotus_1_1AllSame-members.html  structotus_1_1AllSame.html  structotus_1_1AllSame_3_01T_00_01U_00_01Us_8_8_8_01_4-members.html  structotus_1_1AllSame_3_01T_00_01U_00_01Us_8_8_8_01_4.html  structotus_1_1AllSame_3_01T_01_4-members.html  structotus_1_1AllSame_3_01T_01_4.html  structotus_1_1EnableIf.html  structotus_1_1EnableIf_3_01true_00_01T_01_4-members.html  structotus_1_1EnableIf_3_01true_00_01T_01_4.html  structotus_1_1HasFunction-members.html  structotus_1_1HasFunction.html  structotus_1_1HasToString-members.html  structotus_1_1HasToString.html  structotus_1_1IsSame-members.html  structotus_1_1IsSame.html  structotus_1_1IsSame_3_01T_00_01T_01_4-members.html  structotus_1_1IsSame_3_01T_00_01T_01_4.html
latex/: annotated.tex  files.tex  lib_8h_source.tex  lib__sfinae_8h_source.tex  md_README.tex  namespaceotus.tex  namespaces.tex  refman.tex  structMyStruct.tex  structotus_1_1AllSame.tex  structotus_1_1AllSame_3_01T_00_01U_00_01Us_8_8_8_01_4.tex  structotus_1_1AllSame_3_01T_01_4.tex  structotus_1_1EnableIf.tex  structotus_1_1EnableIf_3_01true_00_01T_01_4.tex  structotus_1_1HasFunction.tex  structotus_1_1HasToString.tex  structotus_1_1IsSame.tex  structotus_1_1IsSame_3_01T_00_01T_01_4.tex
(+32 files in other folders)
